<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Specifies settings and their default values -->
    <!-- DON'T FORGET to set binding for "input-able" setting, it's in the SettingsActivity.java -->

    <EditTextPreference
        android:defaultValue="2"
        android:key="value-gap"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:title="@string/pref_title_gap" />

    <EditTextPreference
        android:defaultValue="1"
        android:key="value-downsample"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:title="@string/pref_title_downsample" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch-debug"
        android:summary="@string/pref_description_debug"
        android:title="@string/pref_title_debug" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch-reset"
        android:summary="@string/pref_description_reset"
        android:title="@string/pref_title_reset" />

</PreferenceScreen>
